[gd_scene load_steps=19 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/Trampa.tscn" type="PackedScene" id=2]
[ext_resource path="res://SISTEMA/OBJETOS/TRAMPAS/MinaNeutral.gd" type="Script" id=3]
[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaDamage.gd" type="Script" id=4]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/Particle02.png" type="Texture" id=5]
[ext_resource path="res://RECURSOS/IMAGENES/TRAMPAS/Mina neutral/MIna_neutral1_apagada.png" type="Texture" id=6]
[ext_resource path="res://RECURSOS/SONIDOS/EFECTOS/explosion_mina_neutral.mp3" type="AudioStream" id=7]
[ext_resource path="res://RECURSOS/IMAGENES/EFECTOS ESPECIALES/explosion_mina_neutral.png" type="Texture" id=8]
[ext_resource path="res://RECURSOS/SHADERS/MinaNeutral_expansion.tres" type="Material" id=9]
[ext_resource path="res://RECURSOS/SONIDOS/EFECTOS/beep.mp3" type="AudioStream" id=10]
[ext_resource path="res://RECURSOS/IMAGENES/TRAMPAS/Mina neutral/MIna_neutral1.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=12]
resource_name = "apagada"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "descuento"
length = 0.14
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1.5, 0.0, 0.0 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}

[sub_resource type="Animation" id=13]
resource_name = "encendida"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1.2, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Light2D:texture_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Light2D:color")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.0196078, 0.0196078, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ZonaActivacion/CollisionShape2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath(".:z_index")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "explosion"
length = 1.5
step = 0.05
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("ZonaActivacion/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:vframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.05, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AreaDamage:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AreaDamage/CollisionShape2D:shape:extents")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( 30, 29.5 ), Vector2( 44.5, 42.5 ), Vector2( 48, 46 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Light2D:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.701961, 0.0627451, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Light2D:energy")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 10.0, 1.0, 1.5, 0.5 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Light2D:texture_scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.15, 0.15, 1.0, 0.4, 0.02 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath(".:z_index")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("ColorRect:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/14/type = "method"
tracks/14/path = NodePath(".")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ true ],
"method": "set_monitoring"
}, {
"args": [ false ],
"method": "set_monitoring"
} ]
}

[sub_resource type="RectangleShape2D" id=7]
resource_local_to_scene = true
extents = Vector2( 48, 46 )

[node name="MinaNeutral" instance=ExtResource( 2 )]
z_index = 2
script = ExtResource( 3 )
tiempo = 2.2

[node name="Sprite" parent="." index="0"]
visible = false
material = SubResource( 9 )
texture = ExtResource( 8 )
hframes = 3
vframes = 3
frame = 7

[node name="CollisionShape2D" parent="ZonaActivacion" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/apagada = SubResource( 12 )
anims/descuento = SubResource( 5 )
anims/encendida = SubResource( 13 )
anims/explosion = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="." index="3"]
texture = ExtResource( 5 )
texture_scale = 0.15
color = Color( 0.972549, 0.701961, 0.0627451, 1 )
energy = 0.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 7 )
max_distance = 450.0

[node name="AreaDamage" type="Area2D" parent="." index="5"]
collision_layer = 0
input_pickable = false
monitoring = false
monitorable = false
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage" index="0"]
visible = false
position = Vector2( 3, -7 )
shape = SubResource( 7 )

[node name="Sprite2" type="Sprite" parent="." index="6"]
visible = false
position = Vector2( 944, 540.5 )
scale = Vector2( 30.5, 17.8906 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="." index="7"]
visible = false
position = Vector2( -24.5, -19 )
scale = Vector2( 3.73438, 3.78125 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="8"]
visible = false
light_mask = 0
material = ExtResource( 9 )
margin_left = -144.0
margin_top = -151.0
margin_right = 144.0
margin_bottom = 116.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 144, 151 )

[connection signal="body_entered" from="ZonaActivacion" to="." method="_on_ZonaActivacion_body_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
[connection signal="body_entered" from="AreaDamage" to="AreaDamage" method="_on_AreaDamage_body_entered"]
